--- a/src/index.css
+++ b/src/index.css
@@ -60,10 +60,19 @@ body {
   width: 12px;
   height: 12px;
   background-color: white;
-  border: 2px solid #3498db; /* Blue border similar to your image */
+  border: 2px solid #3498db;
   border-radius: 50%;
   position: absolute;
   z-index: 10;
+}
+
+.react-resizable-handle-border {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #3498db;
+  position: absolute;
+  z-index: 9;
 }
 
 .react-resizable-handle-sw {
