--- a/src/index.css
+++ b/src/index.css
@@ -57,19 +57,15 @@ body {
 /* resize */
 .resizeable-element.selected .react-resizable-handle {
   display: block;
-  width: 12px;
-  height: 12px;
-  background-color: white;
   border: 2px solid #3498db;
-  border-radius: 50%;
+  background-color: #3498db;
+  border-radius: 20px;
   position: absolute;
   z-index: 10;
 }
 
 .react-resizable-handle-border {
   display: block;
-  width: 100%;
-  height: 100%;
   border: 2px solid #3498db;
   position: absolute;
   z-index: 9;
@@ -79,32 +75,38 @@ body {
   bottom: -6px;
   left: -6px;
   cursor: sw-resize;
+  width: 20px;
+  height: 10px;
 }
 
 .react-resizable-handle-se {
   bottom: -6px;
   right: -6px;
   cursor: se-resize;
+  width: 20px;
+  height: 10px;
 }
 
 .react-resizable-handle-nw {
   top: -6px;
   left: -6px;
   cursor: nw-resize;
+  width: 20px;
+  height: 10px;
 }
 
 .react-resizable-handle-ne {
   top: -6px;
   right: -6px;
   cursor: ne-resize;
+  width: 20px;
+  height: 10px;
 }
 
 .react-resizable-handle-w,
 .react-resizable-handle-e,
 .react-resizable-handle-n,
 .react-resizable-handle-s {
-  width: 8px;
-  height: 24px;
   background-color: white;
   border-radius: 4px;
   border: 2px solid #3498db;
@@ -114,22 +116,30 @@ body {
   left: -6px;
   top: calc(50% - 12px);
   cursor: w-resize;
+  width: 10px;
+  height: 20px;
 }
 
 .react-resizable-handle-e {
   right: -6px;
   top: calc(50% - 12px);
   cursor: e-resize;
+  width: 10px;
+  height: 20px;
 }
 
 .react-resizable-handle-n {
   top: -6px;
   left: calc(50% - 12px);
   cursor: n-resize;
+  width: 20px;
+  height: 10px;
 }
 
 .react-resizable-handle-s {
   bottom: -6px;
   left: calc(50% - 12px);
   cursor: s-resize;
+  width: 20px;
+  height: 10px;
 }
