--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ body {
     0 0 30px rgba(102, 191, 191, 0.5);
   transform: scale(1);
   transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+  /* cubic-bezier(0.23, 1, 0.320, 1) */
   pointer-events: none;
 }
 
