--- a/src/index.css
+++ b/src/index.css
@@ -212,3 +212,48 @@ body {
 /* .react-draggable {
   transform: none !important;
 } */
+
+
+
+@keyframes rotateBorder {
+	100% {
+		transform: rotate(1turn);
+	}
+}
+
+.rainbow {
+	position: relative;
+	z-index: 0;
+	border-radius: 10px;
+	overflow: hidden;
+	font-family: sans-serif;
+	font-weight: bold;
+	&::before {
+		content: '';
+		position: absolute;
+		z-index: -2;
+		left: -50%;
+		top: -50%;
+		width: 200%;
+		height: 200%;
+		background-color: #55bab9;
+		background-repeat: no-repeat;
+		background-size: 50% 50%, 50% 50%;
+		background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+		background-image: linear-gradient(#399953, #399953), linear-gradient(#fbb300, #fbb300), linear-gradient(#d53e33, #d53e33), linear-gradient(#377af5, #377af5);
+		animation: rotateBorder 4s linear infinite;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2); /* Shadow around the border */
+	}
+	
+	&::after {
+		content: '';
+		position: absolute;
+		z-index: -1;
+		left: 6px;
+		top: 6px;
+		width: calc(100% - 12px);
+		height: calc(100% - 12px);
+		background: #55bab9;
+		border-radius: 5px;
+	}
+}
