--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ body {
   transition: transform 0.5s ease-out, opacity 0.5s ease-out;
   /* cubic-bezier(0.23, 1, 0.320, 1) */
   pointer-events: none;
+  z-index: 100000;
 }
 
 #borderBottomEffect {
